# roeh

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/causality/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/rules/: mod.rs
src/components/layout/: Sidebar.tsx  Titlebar.tsx  Topbar.tsx  index.ts
src/components/ui/: Drawer.tsx  Icons.tsx  NotificationCenter.tsx  WorldMap.tsx  index.ts
src/data/: mock.tsx
src/screens/Dashboard/: ExpertView.tsx  NarrativeView.tsx  index.tsx
src/screens/History/: index.tsx
src/screens/Onboarding/: index.tsx
src/screens/Settings/: index.tsx
src/screens/System/: index.tsx
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
