[package]
name = "roeh"
version = "0.1.0"
description = "Ro'eh — Celui qui voit ce que les autres ne voient pas"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "roeh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }

# Logging
log     = "0.4"
env_logger = "0.11"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# This feature is used for production builds or when `devPath` points to the file system.
# DO NOT remove this; it's critical.
custom-protocol = ["tauri/custom-protocol"]
